# VGraphics

./: .gitignore  CMakeLists.txt  CompileShaders.bat
include/VG/: VG.h
include/spirv_cross/: spirv_cross_containers.hpp
include/vulkan/: vk_platform.h  vulkan.hpp
src/: Attachment.cpp  Attachment.h  Buffer.cpp  Buffer.h  CmdBuffer.cpp  CmdBuffer.h  CmdPool.cpp  CommandBuffer.cpp  CommandBuffer.h  ComputePipeline.cpp  ComputePipeline.h  Debug.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  Enums.h  Fence.cpp  Fence.h  Flags.h  FormatInfo.cpp  FormatInfo.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Handle.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  MemoryManager.cpp  MemoryManager.h  MySemaphore.cpp  NamedResources.cpp  NamedResources.h  (+27 more)
src/VG/: VG.h
src/shaders/: particle.vert  shader.comp  shader.frag  shader.vert  shaderVert.spv  wariacje.comp
tests/: ComputeShader.cpp  InitBenchmark.cpp  MeshLoader.cpp  MiniBenchmark.h  Source.cpp  VGTest.cpp  Wariacje.cpp
tests/Benchmarks/: processed.txt  unprocessed.txt
